2004-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablestream.hxx:
  - Made columnlist() use new separated_list()
 include/pqxx/util.hxx:
  - New class template items<> to make container initialization easy
  - separated_list() generates comma/semicolon/...-separated lists
 src/transaction_base.cxx:
  - No longer go async in BeginCopyWrite()
 test/test008.cxx, test/test010.cxx:
  - Use separated_list() instead of output loop
 test/test010.cxx, test/test080.cxx:
  - Use items<> instead of hand-filling containers
2004-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
  - Added errorposition()
 README:
  - Added KPoGre to list of libpqxx-based projects
2004-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/all.h:
  - Added transactionitf.h, thanks Bart Samwel
  - Which doesn't mean that these files aren't still deprecated, of course...
2004-05-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - Complete test coverage
 include/pqxx/util.hxx, src/robusttransaction.cxx, src/util.cxx, test/test018.cxx,
 test/test045.cxx:
  - Added sqlesc() functions
  - Deprecated Quote() functions
 src/connection_base.cxx:
  - Removed unnecessary PGSTD:: scope qualifiers
  - Added some missing quotes in LISTEN/UNLISTEN statements
 src/connection.cxx, src/largeobject.cxx:
  - Removed unnecessary PGSTD:: scope qualifiers
 src/util.cxx:
  - When escaping, check for isprint rather than isgraph
  - Escape single quote to double single quote, as per SQL
 test/test000.cxx:
  - New
  - Should succeed even if there is no database to connect to
 test/test009.cxx:
  - Renamed test table to have standard "pqxx" prefix
  - Test tablewriter's column specifiers
 test/test004.cxx, test/test078.cxx:
  - Properly quoted trigger names
2004-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Should generate libpqxx.spec now, thanks Arjen Baart
2004-05-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease: