@@ -1,4 +1,7 @@
 2004-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/pipeline.hxx, src/pipeline.cxx:
+  - Made prepended "SELECT 0" query explicit to pave way for partial retrieval
+  - Syntax error reporting tries to narrow down problematic query
  include/pqxx/tablestream.hxx:
   - Made columnlist() use new separated_list()
  include/pqxx/util.hxx:
